# video-production

./: .gitignore  20260121_Legendary_AI_Team_Architecture_Report.md  20260122_remotion_lipsync_implementation.md  Antigravity_Guide.md  Creative_Team_Proposal.md  KamuiMCP_Implementation_Log_20260122.md  Team_Implementation_Report.md  check_env.py  check_openai.py  check_requests.py  check_tools_requests.py  check_tools_robust.py  check_uploader.py  check_video_analysis_tools.py  claude_desktop_config.json  clawdbot_log_miyake_twitter.md  codex_config.toml  codex_config_part1.toml  codex_config_part2.toml  codex_config_part3.toml  codex_config_part4.toml  convert_config_gemini.py  convert_config_stdio.py  convert_config_v2.py  convert_config_v3.py  convert_config_v4.py  create_short_20260109.py  create_short_20260110.py  create_short_20260110_v2.py  curl_mcp_client.py  data_privacy_day_miyake.md  data_privacy_day_miyake_twitter.md  edit_hyakumeiki_movie.py  flag_day_miyake.md  flag_day_miyake_twitter.md  gemini_workflow_exec.py  gemini_workflow_exec_pty.py  generate_hyakumeiki_images.py  generate_hyakumeiki_videos.py  generate_manga.py  (+30 more)
.agent/skills/: agent-memory
.agent/workflows/: creative-production.md
Documents/: Activity_Log_2026-01-28.md
Documents/Guides/: Document_Management_Policy.md  Skill_Creation_Guide.md
TwilightStation/: package-lock.json  package.json  tsconfig.json
creative_studio_mcp/: README.md  pyproject.toml
creative_studio_mcp/src/: main.py
creative_studio_mcp/src/tools/: ffmpeg_tools.py
remotion-video/: package-lock.json  package.json
(+26 files in other folders)
